Fix big blue safer spacing

--- a/application/themes/safer/css/application.less
+++ b/application/themes/safer/css/application.less
@@ -86,12 +86,18 @@ h1, h2, h3 {
 
   .big-safer {
     font-size: 100px;
+    margin-right: 5px;
     text-transform: uppercase;
     color: #57a6e8;
     font-weight: bold;
     float: left;
     font-family: 'Pompiere', cursive;
-    line-height: 55px;
+    line-height: 17px;
+    @media screen and (min-width: @medium-screen) {
+      & {
+        line-height: 55px;
+      }
+    }
   }
 
   h1 {
